支持创建新的文章，在空表的情况下也可以。
